--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -47,7 +47,7 @@ jobs:
         submodules: recursive
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/bin -DCMAKE_C_COMPILER=C:\msys64\mingw64\bin\clang -DCMAKE_CXX_COMPILER=C:\msys64\mingw64\bin\clang++ -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -G "Unix Makefiles" -B ${{github.workspace}}/bin -DCMAKE_C_COMPILER=C:\msys64\mingw64\bin\clang -DCMAKE_CXX_COMPILER=C:\msys64\mingw64\bin\clang++ -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       run: cmake --build ${{github.workspace}}/bin --config ${{env.BUILD_TYPE}}
